Create new benchmark that encodes, serialize and deserialize